# videodistiller

./: .env.example  .gitignore  QUICKSTART.md  README.md  START_HERE.txt  pyproject.toml  requirements.txt
.claude/: README.md  context.md
.claude/hooks/: hooks.json  session-start.sh
docs/plans/: 2025-11-20-phase1-mvp-implementation.md  2025-11-20-phase2-llm-summarization-design.md  2025-11-20-videodistiller-architecture-design.md
scripts/: README.md  subscriptions.py  sync_watch_later.sh  validate_setup.py  watch_later.py
src/: __init__.py
src/cli/: main.py  utils.py
src/core/: interfaces.py  models.py
src/llm/: __init__.py  analyzer.py  openrouter_client.py  prompts.py
src/pipeline/: pipeline.py
src/providers/: __init__.py
src/providers/storage/: json_repo.py
src/providers/youtube/: __init__.py  exceptions.py  extractor.py
src/utils/: config.py  logging.py
tests/: __init__.py
tests/integration/: test_pipeline.py
tests/unit/: test_analyzer.py  test_cli.py  test_config.py  test_interfaces.py  test_json_repository.py  test_logging.py  test_models.py  test_openrouter_client.py  test_prompts.py  test_youtube_extractor.py
