[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videodistiller"
version = "0.1.0"
description = "Extract and analyze YouTube video content"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TK Kipper", email = "tk@example.com"}
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.100.0",
    "youtube-transcript-api>=0.6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
]

[project.scripts]
videodistiller = "src.cli.main:cli"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
